--- a/Courses/Seminars/MPC/Spring17.html
+++ b/Courses/Seminars/MPC/Spring17.html
@@ -99,7 +99,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 
  
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-	<td> 4 </td> <td> 05/04 (Wednesday!)</td> <td>  ?  </td> 
+	<td> 4 </td> <td> 05/04 (Wednesday!)</td> <td>  Gal Arnon  </td> 
 	<td>  
 	<div align="left">
 	<b>Oblivious transfer</b><br>  
@@ -133,7 +133,8 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
    
-	<td> 6 </td> <td>  09/05  </td> <td>? </td> 
+	<td> 6 </td> <td>  09/05  </td> <td>
+Lev Pachmanov </td> 
 	<td> 
 	<div align="left">
 	<b>BGW protocol</b> (unconditionally secure MPC for honest majority)<br>
@@ -143,7 +144,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
  
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-    	<td> 7 </td> <td>   16/05  </td> <td> ?  </td> 
+    	<td> 7 </td> <td>   16/05  </td> <td> Adam Alon  </td> 
 	<td> 
 	<div align="left">
 	<b>BMR protocol</b> (constant-round MPC)<br>
@@ -153,7 +154,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
 
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-	<td> 8 </td> <td> 23/05 </td> <td> ?   </td> 
+	<td> 8 </td> <td> 23/05 </td> <td> Doron Sobol   </td> 
 	<td>  	
 	<div align="left">
 	<b>GMW compiler</b> (enforcing semi-honest behavior)<br>
