--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ The prizes are given for outstanding papers published in SIAM journals during th
 <h2> Teaching  </h2>
 <ul>
 
- <li><a  href="http://moodle.tau.ac.il/course/view.php?id=368416201"> Foundation  of Cryptography, Advanced Topics (Spring 17)</a></li>
+ <li><a  href="http://moodle.tau.ac.il/course/view.php?id=368413101#section-1"> Foundation  of Cryptography, Advanced Topics (Spring 17)</a></li>
 
   <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Seminars/MPC/Spring17.html"> Multi Party Computation (student seminar)&nbsp; (Spring 17)</a></li>
 
