--- a/Courses/Seminars/MPC/Spring17.html
+++ b/Courses/Seminars/MPC/Spring17.html
@@ -88,7 +88,8 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
 
 <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-	<td> 3 </td> <td> 04/04 </td> <td> ??   </td> 
+	<td> 3 </td> <td> 04/04 </td> <td> Shlomi Shamir
+   </td> 
 	<td> 
 	<div align="left">
 	<b>Yao's Garbled Circuit</b> (semi-honest two-party protocol)<br> 
@@ -122,7 +123,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%"> 
-	 <td> 5 </td> <td>  25/4  </td> <td> ? </td> 
+	 <td> 5 </td> <td>  25/4  </td> <td> Noam Nissan</td> 
 	<td>
 	<div align="left">
 	<b>GMW protocol</b> (semi-honest multi-party protocol)<br>
@@ -164,7 +165,7 @@ Lev Pachmanov </td>
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-      	<td> 9 </td> <td> 06/06 </td> <td>?</td> 
+      	<td> 9 </td> <td> 06/06 </td> <td>Jhonatan Tavori</td> 
 	<td>  
 	<div align="left">
 	<b>IKOS zero-knowledge proofs</b> (two-party ZKP from MPC)<br>
@@ -390,10 +391,12 @@ Lev Pachmanov </td>
 	[GMW87]  O. Goldreich, S. Micali and A. Wigderson. <I>How to Play Any Mental Game – A Completeness Theorem for Protocols with Honest Majority.</I> In 19th STOC, pages 218–229, 1987.
 	</li>
 	<li> 
-	[Gol04]  O. Goldreich. <I>Foundations of Cryptography: Volume 2 – Basic Applications.</I> Cambridge University Press, 2004.
+	[Gol04]  O. Goldreich. <I>Foundations of Cryptography: Volume 2 – Basic Applications.</I> Cambridge University Press, 2004.
+
 	</li>
 	<li> 
-	[HL10]  C. Hazay and Y. Lindell. <I>Efficient Secure Two-Party Protocols: Techniques and Constructions.</I> Springer, 2010.
+	[HL10]  C. Hazay and Y. Lindell. <I>Efficient Secure Two-Party Protocols: Techniques and Constructions.</I> Springer, 2010.
+
 	</li>
 	<li> 
 	[IKNP03]  Y. Ishai, J. Kilian, K. Nissim, E. Petrank. <I>Extending Oblivious Transfers Efficiently.</I>  In CRYPTO 2003, pages 145-161.
