--- a/Courses/Seminars/MPC/Spring17.html
+++ b/Courses/Seminars/MPC/Spring17.html
@@ -176,7 +176,7 @@ Lev Pachmanov </td>
  
  
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    	<td> 10 </td> <td> 13/06  </td> <td> ? </td> 
+    	<td> 10 </td> <td> 13/06  </td> <td> Assaf Yifrach </td> 
 	<td> 
 	<div align="left">
 	<b>Cut and choose</b> (Yao's protocol for malicious adversaries)<br>
