--- a/Courses/Seminars/MPC/Spring17.html
+++ b/Courses/Seminars/MPC/Spring17.html
@@ -67,7 +67,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
     	<td> 1 </td> <td> 14/03 </td> <td> Ran Cohen  </td> 
 	<td> 
 	<div align="left">
-	<b>Introduction</b> <br> <i></i> 
+	<b>Introduction <a href="Intro.pdf">[slides]</a> </b> <br> <i></i> 
 	</div>
 	</td>     
 </tr>
@@ -155,7 +155,7 @@ Lev Pachmanov </td>
  </tr>
 
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-	<td> 8 </td> <td> 23/05 </td> <td> Doron Sobol   </td> 
+	<td> 8 </td> <td> 23/05 </td> <td> Jhonatan Tavori  </td> 
 	<td>  	
 	<div align="left">
 	<b>GMW compiler</b> (enforcing semi-honest behavior)<br>
@@ -165,7 +165,7 @@ Lev Pachmanov </td>
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-      	<td> 9 </td> <td> 06/06 </td> <td>Jhonatan Tavori</td> 
+      	<td> 9 </td> <td> 06/06 </td> <td>Alon Resler</td> 
 	<td>  
 	<div align="left">
 	<b>IKOS zero-knowledge proofs</b> (two-party ZKP from MPC)<br>
@@ -186,7 +186,7 @@ Lev Pachmanov </td>
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">    
-	<td> 11 </td> <td> 20/06    </td> <td> ? </td> 
+	<td> 11 </td> <td> 20/06    </td> <td> Doron Sobol  </td> 
 	<td> 
 	<div align="left">
 	<b>Sigma protocols</b><br>
@@ -196,7 +196,7 @@ Lev Pachmanov </td>
  </tr>
  
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    	<td> 12 </td> <td> 27/06 </td> <td> ? </td> 
+    	<td> 12 </td> <td> 27/06 </td> <td>David Tsiris</td> 
 	<td> 	
 	<div align="left">
 	<b>Secure computation of specific functionalities</b><br>	
