--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ Iftach Haitner and Eliad Tsfadia <br>
 <strong>An Almost-Optimally Fair Three-Party Coin-Flipping Protocol</strong><br>
 <span class=abslide>[abstract]</span> <a href="papers/3PartyCF/3Party-full.ppsx">[slides]</a> <br>
 STOC 2014 <a href="papers/3PartyCF/QuasiOptimalCF_CR.pdf">[pdf]</a><br>
-SIAM Journal of Computing 2017, to appear <br>
+SIAM Journal of Computing 2017 <a href="http://epubs.siam.org/doi/abs/10.1137/15M1009147">[link]</a>   <br>
 Draft of full version <a href="papers/3PartyCF/QuasiOptimalCF_Full.pdf">[pdf]</a> <img src="up.png" class=update1><br><br>
 
 
