--- a/Courses/Seminars/MPC/Spring17.html
+++ b/Courses/Seminars/MPC/Spring17.html
@@ -186,7 +186,7 @@ Lev Pachmanov </td>
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">    
-	<td> 11 </td> <td> 20/06    </td> <td> Doron Sobol  </td> 
+	<td> 11 </td> <td> 20/06    </td> <td> Doron Sobol  and Rotem Tsabary </td> 
 	<td> 
 	<div align="left">
 	<b>Sigma protocols</b><br>
