--- a/index.html
+++ b/index.html
@@ -361,10 +361,10 @@ SODA 2017 <a href="papers/3PartyCF/ManyPartyCF_SODA.pdf">[pdf]</a><br>
 In a multi-party  fair coin-flipping protocol, the parties output a common (close to) unbiased  bit, even when some corrupted parties try to bias the output. 
 In this work we focus on the case of arbitrary number of corrupted parties.  <span class=blu1> Cleve [STOC 1986] </span> has shown that in <b> any</b> such <span class=blu2>m</span>-round coin-flipping protocol, the corrupted parties can bias the honest parties' 
 common output bit  by <span class=blu2> &Omega;(1/m)</span>. For more than two decades, however,  the best known coin-flipping protocol was the one of <span class=blu1> Awerbuch, Blum, Chor, Goldwasser, and Micali [Manuscript 1985]</span>, who presented a <span class=blu2>t</span>-party, <span class=blu2>m</span>-round  protocol with bias  
-<span class=blu2> &Theta;(&radic;<span style="text-decoration:overline;">t</span>/m)</span>. This was changed by a recent breakthrough result of <span class=blu1> Moran et al. [TCC 2009]</span>,
+<span class=blu2> &Theta;(t/&radic;<span style="text-decoration:overline;">m</span>)</span>. This was changed by a recent breakthrough result of <span class=blu1> Moran et al. [TCC 2009]</span>,
 who constructed an <span class=blu2>m</span>-round, two-party coin-flipping protocol with optimal bias <span class=blu2>&Theta;(1/m)</span>. 
 Recently, <span class=blu1> Haitner and Tsfadia [STOC 14] </span>  constructed an <span class=blu2>m</span>-round, three-party coin-flipping protocol with  bias  <span class=blu2> O((log  m)<sup>3</sup>/m</span>. 
-Still for the case of more than three parties,  the best known protocol remained the <span class=blu2> &Theta;(&radic;<span style="text-decoration:overline;">t</span>/m)</span>-bias protocol of <span class=blu1> Awerbuch et al</span>.
+Still for the case of more than three parties,  the best known protocol remained the <span class=blu2> &Theta;(t/&radic;<span style="text-decoration:overline;">m</span>)</span>-bias protocol of <span class=blu1> Awerbuch et al</span>.
 
 <br>
 We make a step towards eliminating the above gap, presenting a <span class=blu2>t</span>-party,  <span class=blu2>m</span>-round coin-flipping protocol, 
