--- a/index.html
+++ b/index.html
@@ -346,6 +346,23 @@ See the <a href="http://cpiis.cs.tau.ac.il/postdoc-fellowships-internships/">TAU
 
 <ul id=pub1>
 
+<li>
+Iftach Haitner and <a href="http://www.eecs.harvard.edu/%7Esalil/"> Salil Vadhan </a> <br>
+<strong>The Many Entropies in One-Way Functions</strong>  <img src="new.png" class=update1><br>
+<span class=abslide>[abstract]</span>   <a href="papers/ManyEntInOWF/ManyEntInOWF_SingleFile.pdf">[pdf]</a><br>
+A chapter in <a href="https://link.springer.com/book/10.1007%2F978-3-319-57048-8">Tutorials on the Foundations of Cryptography</a> dedicated to <a href="http://www.wisdom.weizmann.ac.il/~oded/"> Oded Goldreich</a>  60th  birthday<br><br>
+
+
+
+<div class="box">
+<p>
+Computational analogues of information-theoretic notions have given rise to some of the most interesting phenomena in the theory of computation.  For example, computational indistinguishability,    <span class=blu1>  Goldwasser and Micali [Journal of Computer and System Sciences 1984] </span>, which is the computational analogue of statistical distance,  enabled the bypassing of Shanon's impossibility results on perfectly secure encryption, and provided the basis for the computational theory of pseudorandomness. 
+Pseudoentropy,  <span class=blu1> Haastad, Impagliazzo, Levin, and Luby [SICOMP 1999]</span>, a computational analogue of entropy, was the key to the fundamental result establishing the equivalence of pseudorandom generators and one-way functions, and has become a basic concept in complexity theory and cryptography. 
+
+This tutorial discusses  two rather recent computational notions  of entropy, both  of which can be easily found in any  one-way function,  the most basic cryptographic primitive. The first notion is next-block pseudoentropy,  <span class=blu1> Haitner, Reingold and Vadhan [SICOMP 2013]</span>, a refinement of  of pseudoentropy that  enables simpler and more  efficient construction of pseudorandom generators.  The second is inaccessible entropy, <span class=blu1> Haitner, Reingold, Vadhan and Wee [STOC 2009]</span>, which relates to unforgeability and is used to construct simpler and more efficient universal one-way hash functions and statistically hiding commitments.
+</p>
+</div>
+</li>
 
 <li>
 <a href="http://www.tau.ac.il/~nivb/">Niv Buchbinder</a>  and Iftach Haitner and Nissan Levi and Eliad Tsfadia <br>
@@ -385,7 +402,7 @@ We analyze  the new protocols by  presenting  a new paradigm for analyzing fairn
 <li>
 <p>
 <a href="http://www.cs.tau.ac.il/~cohenran/">Ran Cohen</a> and Iftach Haitner and  <a href="http://omrier.wix.com/eran-omri">Eran Omri</a>  and Lior Rotem<br>
-<strong>Characterization of Secure Multiparty Computation Without Broadcast </strong>  <img src="new.png" class=update1><br>
+<strong>Characterization of Secure Multiparty Computation Without Broadcast </strong> <br>
 <span class=abslide>[abstract]</span><br>
 TCC 2016-A <a  href="http://link.springer.com/chapter/10.1007/978-3-662-49096-9_25">[link]</a><br>
 Draft of full version <a href="papers/NoBroadcastCoin/MPCNoBroadcast.pdf">[pdf]</a> 
