--- a/Courses/Seminars/MPC/Spring17.html
+++ b/Courses/Seminars/MPC/Spring17.html
@@ -135,7 +135,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
    
 	<td> 6 </td> <td>  09/05  </td> <td>
-Lev Pachmanov </td> 
+Assaf Yifrach </td> 
 	<td> 
 	<div align="left">
 	<b>BGW protocol</b> (unconditionally secure MPC for honest majority)<br>
@@ -176,7 +176,7 @@ Lev Pachmanov </td>
  
  
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    	<td> 10 </td> <td> 13/06  </td> <td> Assaf Yifrach </td> 
+    	<td> 10 </td> <td> 13/06  </td> <td> Lev Pachmanov </td> 
 	<td> 
 	<div align="left">
 	<b>Cut and choose</b> (Yao's protocol for malicious adversaries)<br>
@@ -190,7 +190,7 @@ Lev Pachmanov </td>
 	<td> 
 	<div align="left">
 	<b>Sigma protocols</b><br>
-	<i> [HL10] sections 4.1-4.3</i>
+	<i> [HL10]  section 6</i>
 	</div>
 	</td>   
  </tr>
