--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ We analyze  the new protocols by  presenting  a new paradigm for analyzing fairn
 <strong>Characterization of Secure Multiparty Computation Without Broadcast </strong> <br>
 <span class=abslide>[abstract]</span><br>
 TCC 2016-A <a  href="http://link.springer.com/chapter/10.1007/978-3-662-49096-9_25">[link]</a><br>
-Journal of Cryptology 2017 <!-- <a  href="http://link.springer.com/chapter/10.1007/978-3-662-49096-9_25">[link]</a>--><br>
+Journal of Cryptology 2017 <a  href="http://rdcu.be/v7wO">[link]</a><br>
 Draft of full version <a href="papers/NoBroadcastCoin/MPCNoBroadcast.pdf">[pdf]</a> 
 </p>
 
