--- a/index.html
+++ b/index.html
@@ -307,9 +307,9 @@ The prizes are given for outstanding papers published in SIAM journals during th
 <li><a href="http://moodle.tau.ac.il/2017/course/view.php?id=368220001">Computational Models (Fall 17)</a></li>
 
 
- <li><a  href="http://moodle.tau.ac.il/2017/course/view.php?id=368413101#section-1"> Foundation  of Cryptography, Advanced Topics (Spring 17)</a></li>
+ <li><a  href="http://moodle.tau.ac.il/2016/course/view.php?id=368413101"> Foundation  of Cryptography, Advanced Topics (Spring 17)</a></li>
 
- <li><a  href="http://moodle.tau.ac.il/2016/course/view.php?id=368416201" >Foundation  of Cryptography, the Basics (Fall 16)</a></li>
+ <li><a  href="http://moodle.tau.ac.il/2016/course/view.php?id=368416201">Foundation  of Cryptography, the Basics (Fall 16)</a></li>
 
   <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Seminars/MPC/Spring17.html"> Multi Party Computation (student seminar)&nbsp; (Spring 17)</a></li>
 
