--- a/index.html
+++ b/index.html
@@ -512,7 +512,8 @@ Draft of full version <a href="papers/NoBroadcastCoin/MPCNoBroadcast.pdf">[pdf]<
 Iftach Haitner and  <a href="http://www.cs.technion.ac.il/%7Eyuvali/">Yuval Ishai</a> and <a href="http://omrier.wix.com/eran-omri">Eran Omri</a>  and   <a href="http://www.cs.haifa.ac.il/%7Eronen/">Ronen Shaltiel</a><br>
 <strong>Parallel Hashing via List Recoverability</strong> <!-- <img src="new.png" class=update1> --><br>
 <span class=abslide>[abstract]</span><br>
-Crypto 2015  <a href="papers/CRHDomainExtension/CRH_Crypto.pdf">[pdf]</a><br>
+Crypto 2015  <a href="https://link.springer.com/chapter/10.1007/978-3-662-48000-7_9">[link]</a><br>
+<!-- !Draft of full version  <a href="papers/CRHDomainExtension/CRH_Crypto.pdf">[pdf]</a><br> -->
 </p>
 
 
@@ -563,8 +564,10 @@ Gennaro and Trevisan [FOCS 00]</span>.
 <a href="http://www.cs.tau.ac.il/%7Eitayberm/">Itay Berman</a> and Iftach Haitner and  <a href="http://cs.nyu.edu/%7Etentes/Homepage.html">Aris Tentes</a><br>
 <strong>Coin Flipping of Any Constant Bias Implies One-Way Functions </strong> <br>
 <span class=abslide>[abstract]</span>&nbsp<a href="papers/TightCF/TightCoinFlipping_full.ppsx">[slides]</a><br>
-STOC 2014 <a href="papers/TightCF/TightCoingFlipping_CR.pdf">[pdf]</a><br>
+STOC 2014 <a href="http://delivery.acm.org/10.1145/2600000/2591845/p398-berman.pdf?ip=132.67.8.101&id=2591845&acc=ACTIVE%20SERVICE&key=0D17F1A88EABC760%2EA80D87543C7939CB%2E4D4702B0C3E38B35%2E4D4702B0C3E38B35&__acm__=1517326429_84daab5233cfbc087fbaf945630e9933">[link]</a><br>
+Journal of the ACM 2018 <br>
 Draft of full version <a href="papers/TightCF/TCoingFlip_F.pdf">[pdf]</a>  <img src="up.png" class=update1>
+
 </p>
 
 
