--- a/index.html
+++ b/index.html
@@ -351,7 +351,8 @@ See the <a href="http://cpiis.cs.tau.ac.il/postdoc-fellowships-internships/">TAU
 <li>
 Iftach Haitner  and <a href="http://omrier.wix.com/eran-omri">Eran Omri</a> and <a href="http://people.cs.georgetown.edu/~kobbi/">Kobbi Nissim</a> and  <a href="http://www.cs.haifa.ac.il/%7Eronen/">Ronen Shaltiel</a> and  Jad Silbak<br>
 <strong>Computational Two-Party Correlation</strong>  <img src="new.png" class=update1><br>
-<span class=abslide>[abstract]</span>   <a href="papers/ComputationalCorrelation/ComputationalCorrelation.pdf">[pdf]</a><br><br>
+<span class=abslide>[abstract]</span> <br>
+Draft of full version <a href="papers/ComputationalCorrelation/ComputationalCorrelation.pdf">[pdf]</a><br><br>
 
 <div class="box">
 <p>
@@ -395,7 +396,8 @@ are non black box.
 <a href="https://www.cs.bgu.ac.il/~beimel/">Amos Beimel </a> and Iftach Haitner and Nikolaos Makriyannis</a> and <a href="http://omrier.wix.com/eran-omri">Eran Omri</a> <br>
 <strong>Tighter Bounds on Multi-Party Coin Flipping, via
 Augmented Weak Martingales and Dierentially Private Sampling</strong>  <img src="new.png" class=update1><br>
-<span class=abslide>[abstract]</span>   <a href="papers/FairCoinLB/FairCoinLB.pdf">[pdf]</a><br><br>
+<span class=abslide>[abstract]</span> <br>
+Draft of full version  <a href="papers/FairCoinLB/FairCoinLB.pdf">[pdf]</a><br><br>
 
 
 
@@ -423,7 +425,7 @@ uses a differentially private mechanism to minimize the effect of data divergenc
 
 <li>
 Iftach Haitner and <a href="http://www.eecs.harvard.edu/%7Esalil/"> Salil Vadhan </a> <br>
-<strong>The Many Entropies in One-Way Functions</strong>  <img src="new.png" class=update1><br>
+<strong>The Many Entropies in One-Way Functions</strong> <br>
 <span class=abslide>[abstract]</span>   <a href="papers/ManyEntInOWF/ManyEntInOWF_SingleFile.pdf">[pdf]</a><br>
 A chapter in <a href="https://link.springer.com/book/10.1007%2F978-3-319-57048-8">Tutorials on the Foundations of Cryptography</a> dedicated to <a href="http://www.wisdom.weizmann.ac.il/~oded/"> Oded Goldreich</a>  60th  birthday<br><br>
 
@@ -441,7 +443,7 @@ This tutorial discusses  two rather recent computational notions  of entropy, bo
 
 <li>
 <a href="http://www.tau.ac.il/~nivb/">Niv Buchbinder</a>  and Iftach Haitner and Nissan Levi and Eliad Tsfadia <br>
-<strong>Fair Coin Flipping: Tighter Analysis and the Many-Party Case</strong>  <img src="new.png" class=update1><br>
+<strong>Fair Coin Flipping: Tighter Analysis and the Many-Party Case</strong> <br>
 <span class=abslide>[abstract]</span>  <!-- <a href="papers/3PartyCF/ManyPartySeminar.ppsx">[slides]</a> --> <br>
 SODA 2017 <a href="papers/3PartyCF/ManyPartyCF_SODA.pdf">[pdf]</a><br>
 <!-- Draft of dull version <a href="papers/3PartyCF/ManyParty_Full.pdf">[pdf]</a> <img src="up.png" class=update1> -->
@@ -540,7 +542,7 @@ and <a href="http://www.wisdom.weizmann.ac.il/%7Egils/">Gil Segev</a><br>
 <span class=abslide>[abstract]</span><br>
 SIAM Journal of Computing 2015 <a  href="http://epubs.siam.org/doi/abs/10.1137/130938438">[link]</a><br>
 
-Draft of full version <a href="papers/FindingCollisions/FindingCollisions_Joint.pdf"> [pdf]</a>  <img src="up.png" class=update1>
+Draft of full version <a href="papers/FindingCollisions/FindingCollisions_Joint.pdf"> [pdf]</a>  
 </p>
 
 
@@ -587,7 +589,7 @@ Iftach Haitner and Eliad Tsfadia <br>
 <span class=abslide>[abstract]</span> <a href="papers/3PartyCF/3Party-full.ppsx">[slides]</a> <br>
 STOC 2014 <a href="papers/3PartyCF/QuasiOptimalCF_CR.pdf">[pdf]</a><br>
 SIAM Journal of Computing 2017 <a href="http://epubs.siam.org/doi/abs/10.1137/15M1009147">[link]</a>   <br>
-Draft of full version <a href="papers/3PartyCF/QuasiOptimalCF_Full.pdf">[pdf]</a> <img src="up.png" class=update1><br><br>
+Draft of full version <a href="papers/3PartyCF/QuasiOptimalCF_Full.pdf">[pdf]</a> <br><br>
 
 
 
