--- a/Courses/Seminars/DP/Spring18.html
+++ b/Courses/Seminars/DP/Spring18.html
@@ -55,7 +55,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 <h2>Topics and schedule </h2> 
 
 Will be published before before spring semester starts.
-<!--
+
 (see Additional reading for further reading on your lecture topic)
 <br> <br>
 
@@ -72,7 +72,7 @@ Will be published before before spring semester starts.
  
 
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    	<td> 1 </td> <td> 14/03 </td> <td> Ran Cohen  </td> 
+    	<td> 1 </td> <td> 06/03 </td> <td> Nikolaos Makriyannis  </td> 
 	<td> 
 	<div align="left">
 	<b>Introduction</b> <br> <i></i> 
@@ -81,293 +81,162 @@ Will be published before before spring semester starts.
 </tr>
 
 <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-   	<td> 2 </td> <td> 21/03 </td> <td> Nathanel Ozeri   </td> 
+   	<td> 2 </td> <td> 13/03 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
-	<b>Definitions for two-party computation</b> (semi-honest and malicious) <br> 
-	<i>[HL10] sections 2.1-2.3</i> 
+	<b>Basic Techniques (part 1)<br> ss <br> <br>
+	<i>Chapter 3.1 to 3.5</i> <br>
+	Relevant talks:  [<a href="https://www.youtube.com/watch?v=Z1MOWGCyW20&t=4s" target="_blank">video1</a>] 
+	[<a href="https://www.youtube.com/watch?v=w6aHiz0ElkM&t=1s" target="_blank">video2</a>]
+	
 	</div>
 	</td>     
  </tr>
 
-
- <tr  style= "BACKGROUND: rgb(255,0,0) 0% 50%">
-   	<td> </td> <td> 28/03 </td> <td> NO CLASS </td> <td> <span style= "color:#3300CC"></span>  <br> <i></i> </td>     
- </tr>
-
-<tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-	<td> 3 </td> <td> 04/04 </td> <td> Shlomi Shamir
-   </td> 
-	<td> 
-	<div align="left">
-	<b>Yao's Garbled Circuit</b> (semi-honest two-party protocol)<br> 
-	<i>[HL10] sections 3.1-3.4 (section 3.2 only at a high level)</i> 
-	</div>
-	</td>     
- </tr>
-
- 
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-	<td> 4 </td> <td> 05/04 (Wednesday!)</td> <td>  Gal Arnon  </td> 
-	<td>  
-	<div align="left">
-	<b>Oblivious transfer</b><br>  
-	<ul> 
-		<li> 
-		1-out-of-k OT from 1-out-of-2 OT: <i>[<a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=4568208" target="_blank">BCR86</a>] section 2.2</i>
-		</li>
-		<li> 
-		Precomputing OT: <i>[<a href="http://link.springer.com/chapter/10.1007%2F3-540-44750-4_8" target="_blank">Bea95</a>] sections 3.1 and 3.2</i>
-		</li>
-		<li> 
-		OT extension: <i>[<a href="http://drona.csa.iisc.ernet.in/~arpita/StudyGroupOT15/BeaSTOC96.pdf" target="_blank">Bea96</a>] section 3</i>
-		</li>
-		<li> 
-		OT is symmetric: <i>[<a href="https://eprint.iacr.org/2004/336.pdf" target="_blank">WW06</a>] section 4</i>
-		</li>
-	</ul> 
-	</div>
-	</td>
-</tr>
-
- <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%"> 
-	 <td> 5 </td> <td>  25/4  </td> <td> Noam Nissan</td> 
-	<td>
-	<div align="left">
-	<b>GMW protocol</b> (semi-honest multi-party protocol)<br>
-	<i>[Gol04] sections 7.3.3, 7.3.4, and 7.5.2</i>
-	</div>
-	</td>   	 
- </tr>
-
- <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-   
-	<td> 6 </td> <td>  09/05  </td> <td>
-Lev Pachmanov </td> 
+   	<td> 3 </td> <td> 20/03 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
-	<b>BGW protocol</b> (unconditionally secure MPC for honest majority)<br>
-	<i>[<a href="https://eprint.iacr.org/2011/136.pdf" target="_blank">AL17</a>] sections 3 and 4</i> 
+	<b>Basic Techniques (part 2)<br> ss <br> <br>
+	<i>Chapter 3.6</i> 
+	<br>
+	Relevant talks:  [<a href="https://www.youtube.com/watch?v=xXMJDAh5zZI" target="_blank">video</a>] 
 	</div>
-	</td>    
+	</td>     
  </tr>
  
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-    	<td> 7 </td> <td>   16/05  </td> <td> Adam Alon  </td> 
+   	<td> 4 </td> <td> 10/04 </td> <td> ? </td> 
 	<td> 
 	<div align="left">
-	<b>BMR protocol</b> (constant-round MPC)<br>
-	<i>[<a href="http://www.cs.stevens.edu/~nicolosi/classes/12fa-cs693/final/f2-1.pdf" target="_blank">BNP08</a>] sections 3 and 4</i> 
-	</div>
-	</td>        
- </tr>
-
- <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-	<td> 8 </td> <td> 23/05 </td> <td> Doron Sobol   </td> 
-	<td>  	
-	<div align="left">
-	<b>GMW compiler</b> (enforcing semi-honest behavior)<br>
-	<i>[Gol04] sections 7.4.1, 7.4.3, and 7.4.4</i>
+	<b>BLR Mechanism SmallDB <br> <br>
+	<i>Chapter 4.1</i> 
 	</div>
 	</td>     
  </tr>
-
+ 
+ <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
+   	<td> 5 </td> <td> 17/04 </td> <td> ?  </td> 
+	<td> 
+	<div align="left">
+	<b>Private Multiplicative Weights PMW <br> <br>
+	<i>Chapter 4.2</i> 
+	<br>
+	Relevant talks:  [<a href="https://www.youtube.com/watch?v=2Eyc5c4Wdpk" target="_blank">video</a>] 
+	</div>
+	</td>     
+ </tr>
+ 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-      	<td> 9 </td> <td> 06/06 </td> <td>Jhonatan Tavori</td> 
-	<td>  
-	<div align="left">
-	<b>IKOS zero-knowledge proofs</b> (two-party ZKP from MPC)<br>
-	<i>[<a href="http://web.cs.ucla.edu/~rafail/PUBLIC/77.pdf" target="_blank">IKOS09</a>]</i>
-	</div>
-	</td>     
- </tr>
- 
- 
- <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    	<td> 10 </td> <td> 13/06  </td> <td> Assaf Yifrach </td> 
+   	<td> 6 </td> <td> 24/04 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
-	<b>Cut and choose</b> (Yao's protocol for malicious adversaries)<br>
-	<i>[<a href="https://eprint.iacr.org/2010/284.pdf" target="_blank">LP12</a>]</i>
+	<b>Net Mechanism (Generalization of SmallDB) <br> <br>
+	<i>Chapter 5.1</i> 
 	</div>
 	</td>     
  </tr>
 
- <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">    
-	<td> 11 </td> <td> 20/06    </td> <td> ? </td> 
+<tr  style= "BACKGROUND: rgb(255,0,0) 0% 50%">
+   	<td> </td> <td> 01/05 </td> <td> NO CLASS </td> <td> <span style= "color:#3300CC"></span>  <br> <i></i> </td>     
+ </tr>
+
+
+
+<tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
+   	<td> 7 </td> <td> 08/05 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
-	<b>Sigma protocols</b><br>
-	<i> [HL10] sections 4.1-4.3</i>
-	</div>
-	</td>   
- </tr>
- 
-<tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    	<td> 12 </td> <td> 27/06 </td> <td> ? </td> 
-	<td> 	
-	<div align="left">
-	<b>Secure computation of specific functionalities</b><br>	
-	<ul> 
-		<li> 
-		Finding the median: <i>[HL10] chapter 8</i>
-		</li>
-		<li> 
-		Private set intersection: <i>[<a href="http://www.pinkas.net/PAPERS/FNP04.pdf" target="_blank">FNP04</a>]</i>
-		</li>
-	</ul> 
+	<b>Iterative Construction Mechanism <br> <br>
+	<i>Chapter 5.2</i> 
 	</div>
 	</td>     
  </tr>
+ 
+ <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
+   	<td> 8 </td> <td> 15/05 </td> <td> ?  </td> 
+	<td> 
+	<div align="left">
+	<b>Boosting for queries Algorithm <br> <br>
+	<i>Chapter 6.2</i> 
+	</div>
+	</td>     
+ </tr>
+ 
+ <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
+   	<td> 9 </td> <td> 22/05 </td> <td> ?  </td> 
+	<td> 
+	<div align="left">
+	<b>Reconstruction Attacks <br> <br>
+	<i>Chapter 8.1</i> 
+	<br>
+	Relevant talks:  [<a href="https://www.youtube.com/watch?v=5_lTDPYOUJw" target="_blank">video</a>] 
+	</div>
+	</td>     
+ </tr>
+ 
+  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
+   	<td> 10 </td> <td> 29/05 </td> <td> ?  </td> 
+	<td> 
+	<div align="left">
+	<b>Lower Bounds by Packing Arguments <br> <br>
+	<i>Chapter 8.2</i> 
+	<br>
+	Relevant talks:  [<a href="https://www.youtube.com/watch?v=Gj_Wy6ZNPsI&t=9s" target="_blank">video</a>] 
+	</div>
+	</td>     
+ </tr>
+ 
+ <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
+   	<td> 11 </td> <td> 05/06 </td> <td> ?  </td> 
+	<td> 
+	<div align="left">
+	<b>Limits of Poly-time curators <br> <br>
+	<i>Chapters 9.1 &amp; 9.2</i> 
+	</div>
+	</td>     
+ </tr>
+ 
+ <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
+   	<td> 12 </td> <td> 12/05 </td> <td> ?  </td> 
+	<td> 
+	<div align="left">
+	<b>Traitor Tracing and Ramifications to DP <br> <br>
+	<i>Chapter 9.2.1</i>  and <a href="https://arxiv.org/abs/1207.6945">paper</a>
+	<br>
+	Relevant talks:  [<a href="https://www.youtube.com/watch?v=axhE-evQunE" target="_blank">video</a>] 
+	</div>
+	</td>     
+ </tr>
+ 
+
  
 </tbody>
 </table>
---!> 
+
 
 <br><br> 
 
 
-<h2> Additional Reading</h2>
-Will be published before before spring semester starts.
+<h2> Additional material</h2>
 
-<!--
 <ul> 
 	<li> 
-		<b>Lecture 2</b><br>
-		<ul> 
-			<li> 
-			[Gol04] Section 7.2
-			</li>
-			<li> 
-			First BIU winter school (Lindell) [<a href="https://www.youtube.com/watch?v=z3U-5mf6hGw" target="_blank">video</a>]
-			</li>
-			<li> 
-			Fifth BIU winter school (Lindell) [<a href="https://www.youtube.com/watch?v=C6WRWtym2JY&list=PLXF_IJaFk-9BFn8M-dsEm5x3-5Cvji3V9&index=1" target="_blank">video</a>]
-			</li>
-		</ul> 
+		 <a href="https://cyber.biu.ac.il/event/the-7th-biu-winter-school/" target="_blank">Seventh  BIU winter school  on Differential privacy</a>
 	</li>
-
+<br>
 	<li> 
-		<b>Lecture 3</b><br>
-		<ul> 
-			<li> 
-			[<a href="https://eprint.iacr.org/2004/175.pdf" target="_blank">LP09</a>]
-			</li>
-			<li> 
-			First BIU winter school (Lindell) [<a href="https://www.youtube.com/watch?v=mtKCDJe4a48" target="_blank">video</a>]
-			</li>
-			<li> 
-			Fifth BIU winter school (Pinkas) [<a href="https://www.youtube.com/watch?v=GjhvJxelIVQ&index=2&list=PLXF_IJaFk-9BFn8M-dsEm5x3-5Cvji3V9" target="_blank">video</a>]
-			</li>
-		</ul> 
+		 <a href="https://privacytools.seas.harvard.edu/publications/complexity-differential-privacy" target="_blank">The Complexity of Differential Privacy (a monograph by Salil Vadhan)</a>
 	</li>
-
-	<li> 
-		<b>Lecture 4</b><br>
-		<ul> 
-			<li> 
-			[<a href="http://citeseerx.ist.psu.edu/viewdoc/download;jsessionid=44A11189BAD0D5F91A8321D5D5DD4DEC?doi=10.1.1.10.2385&rep=rep1&type=pdf" target="_blank">IKNP03</a>] (introduction)
-			</li>
-		</ul> 
-	</li>
-
-	<li> 
-		<b>Lecture 5</b><br>
-		<ul> 
-			<li> 
-			[<a href="http://www.math.ias.edu/~avi/PUBLICATIONS/MYPAPERS/GMW87/GMW87.pdf" target="_blank">GMW87</a>]
-			</li>
-			<li> 
-			First BIU winter school (Pinkas) [<a href="https://www.youtube.com/watch?v=kiCv9qGn_8M" target="_blank">video</a>]
-			</li>
-			<li> 
-			Fifth BIU winter school (Pinkas) [<a href="https://www.youtube.com/watch?v=4YwvZaA9IEg&index=3&list=PLXF_IJaFk-9BFn8M-dsEm5x3-5Cvji3V9" target="_blank">video</a>]
-			</li>
-		</ul> 
-	</li>
-
-	<li> 
-		<b>Lecture 6</b><br>
-		<ul> 
-			<li> 
-			[<a href="https://pdfs.semanticscholar.org/bcb4/9a06e4fb7ea831257e146073d84234f4d238.pdf" target="_blank">BGW88</a>]
-			</li>
-			<li> 
-			First BIU winter school (Pinkas) [<a href="https://www.youtube.com/watch?v=bHQYUcMn1do" target="_blank">video</a>]
-			</li>
-		</ul> 
-	</li>
-
-	<li> 
-		<b>Lecture 7</b><br>
-		<ul> 
-			<li> 
-			[<a href="https://pdfs.semanticscholar.org/e530/2edfa2fa077525008333fcb56d9c2f3451ef.pdf" target="_blank">BMR90</a>]
-			</li>
-			<li> 
-			Fifth BIU winter school (Pinkas) [<a href="https://www.youtube.com/watch?v=GjhvJxelIVQ&index=2&list=PLXF_IJaFk-9BFn8M-dsEm5x3-5Cvji3V9" target="_blank">video</a>]
-			</li>
-		</ul> 
-	</li>
-
-	<li> 
-		<b>Lecture 8</b><br>
-		<ul> 
-			<li> 
-			Fifth BIU winter school (Lindell) [<a href="https://www.youtube.com/watch?v=kSrTHBPLsgE&index=5&list=PLXF_IJaFk-9BFn8M-dsEm5x3-5Cvji3V9" target="_blank">video</a>]
-			</li>
-		</ul> 
-	</li>
-
-	<li> 
-		<b>Lecture 9</b><br>
-		<ul> 
-			<li> 
-			First BIU winter school (Ishai) [<a href="https://www.youtube.com/watch?v=lCLkG4qxIWw" target="_blank">video</a>] (first half an hour)
-			</li>
-		</ul> 
-	</li>
-
-	<li> 
-		<b>Lecture 10</b>
-		<ul> 
-			<li> 
-			First BIU winter school (Lindell) [<a href="https://www.youtube.com/watch?v=Mheyw7fIc1Q" target="_blank">video</a>]
-			</li>
-		</ul> 
-	</li>
-
-
-	<li> 
-		<b>Lecture 11</b> 
-		<ul> 
-			<li> 
-			First BIU winter school (Lindell) [<a href="https://www.youtube.com/watch?v=nwsmG3S9wIc" target="_blank">video</a>]
-			</li>
-			<li> 
-			Fifth BIU winter school (Lindell) [<a href="https://www.youtube.com/watch?v=Vahw28dValA&index=4&list=PLXF_IJaFk-9BFn8M-dsEm5x3-5Cvji3V9" target="_blank">video</a>]
-			</li>
-		</ul> 
-	</li>
-
-	<li> 
-		<b>Lecture 12</b>
-		<ul> 
-			<li> 
-			[<a href="http://theory.stanford.edu/~nmishra/Papers/secureComputationMedianOtherElementsSpecifiedRanks.pdf" target="_blank">AMP10</a>]
-			</li>
-			<li> 
-			Fifth BIU winter school (Pinkas) [<a href="https://www.youtube.com/watch?v=WnHczokVDHc" target="_blank">video</a>]
-			</li>
-		</ul> 
-	</li>
+	
+	
 
 </ul> 
 
 
 <br> 
 
---!>
+
 
 
 <!--
