--- a/Courses/Info/Spring18/index.html
+++ b/Courses/Info/Spring18/index.html
@@ -32,21 +32,21 @@
 <div style="text-align : left ; width :900px" >
 <script>document.write(menu)</script>
  <div id=content>
-<p><span class="auto-style1">0368-4486-01, Fall 2015:</span><br />
+<p><span class="auto-style1">0368-4486-01, Spring  2018:</span><br />
 
 <h1>Information Theory and Applications to Computer Science</h1>
 
-	 Tuesdays 10:00-13:00, Room: Shenkar 222<br /><br />
+	 Tuesdays: 10:00-13:00, Room: ?<br /><br />
 
-<b>Instructor:</b> <a href="http://www.cs.tau.ac.il/~iftachh" target="_blank">Iftach Haitner</a> | Schreiber 20<br /><br />
-
-
-<b>Grader:</b> Omer Rotem,  email: firstname.lastname1 at gmail.com. mailbox: Schreiber  #315 (second floor)<br /><br />
+<b>Instructor:</b> <a href="http://www.cs.tau.ac.il/~iftachh" target="_blank">Iftach Haitner</a> | Schreiber 020<br /><br />
 
 
+<b>Grader:</b> ?, mailbox: ?<br /><br />
 
 
-<b>Reception:</b> Sundays 9:00-10:00 (please coordinate via email)<br />
+
+
+<b>Reception:</b> Sundays 9:30-10:30 (please coordinate via email)<br />
 
 
 	 <br/><br/>
