--- a/Courses/Seminars/DP/Spring18.html
+++ b/Courses/Seminars/DP/Spring18.html
@@ -18,7 +18,7 @@
 
 <h2 style="FONT-SIZE: 20pt"> <a href="http://www.cs.tau.ac.il/%7Eiftachh/">Iftach Haitner</a> and Nikolaos Makriyannis</h2>
 
-<span style="FONT-SIZE: 20pt"> Tuesdays: 10:00-12:00,  Room: ?</span> <br><br><br>
+<span style="FONT-SIZE: 20pt"> Tuesdays: 10:00-12:00,  Room: Dan David 204</span> <br><br><br>
 
 
 
