--- a/Courses/Info/Spring18/schedule.html
+++ b/Courses/Info/Spring18/schedule.html
@@ -53,7 +53,7 @@
  <div class=content>
 <h1>  Schedule and Slides  </h1>
 
-Lecture topics is taken from  <a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Info/Fall14/index.html"> last year course</a> and is not final. Links of future talks will remain broken until (hoefully) the night before the talk. 
+Lecture topics is taken from  <a href="http://www.cs.tau.ac.il/~iftachh/Courses/Info/Fall15/index.html"> last year course</a> and is not final. Links of future talks will remain broken until (hoefully) the night before the talk. 
 
 </br>
 
@@ -67,62 +67,71 @@ Lecture topics is taken from  <a href="http://www.cs.tau.ac.il/%7Eiftachh/Course
 
 <tr>
 <td style="width: 7%">1</td>
-<td style="width: 14%">October 20 </td>
+<td style="width: 14%">March 08 </td>
 <td>Introduction: Administrativia and course topics [<a href="Printouts/Introduction_admin_h.pdf" target="_blank">PO</a>] and <br />
 Basic Definitions and Facts [<a href="Printouts/Lesson1_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">2</td>
-<td style="width: 14%">October 27</td>
+<td style="width: 14%">March 15</td>
 <td class="auto-style4">Joint &amp; Conditional Entropy, Mutual Information [<a href="Printouts/Lesson2_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">3</td>
-<td style="width: 14%">November 3</td>
+<td style="width: 14%">March 22</td>
 <td>Graph Covering  [<a href="Printouts/Lesson3_h.pdf" target="_blank">PO</a>  (the differential entropy part will be given in a later class)] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">4</td>
-<td style="width: 14%">November 10</td>
+<td style="width: 14%">March 27 <class="auto-style3">(Tuesday!)</class></td>
 <td>AEP, Data Compression and  Gambling [<a href="Printouts/Lesson4_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">5</td>
-<td style="width: 14%">November 17</td>
+<td style="width: 14%">April 12</td>
 <td>Channel Capacity and Isoperimetric inequality [<a href="Printouts/Lesson5_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">6</td>
-<td style="width: 14%">November 24</td>
+<td style="width: 14%">April 26</td>
 <td>Differential entropy (appears in Lecture 3) and Counting [<a href="Printouts/Lesson6_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
+<td style="width: 7%"> </td>
+<td style="width: 14%">May 03</td>
+<td class="auto-style3">No Class</td>
+</tr>
+
+	
+	
+	
+<tr>
 <td style="width: 7%">7</td>
-<td style="width: 14%">December 1</td>
+<td style="width: 14%">May 10</td>
 <td>Relative Entropy [<a href="Printouts/Lesson7_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">8</td>
-<td style="width: 14%">December 8</td>
+<td style="width: 14%">May 27</td>
 <td>Kolmogorov Complexity and Other Entropy Measures [<a href="Printouts/Lesson8_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">9</td>
-<td style="width: 14%">December 15</td>
+<td style="width: 14%">May 24</td>
 <td>Parallel Repetition of Interactive Arguments [<a href="Printouts/Lesson9_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">10</td>
-<td style="width: 14%">December 22</td>
+<td style="width: 14%">May 31</td>
 <td>Hardcore Predicates [<a href="Printouts/Lesson10_h.pdf" target="_blank">PO</a>] </td>
 
 &nbsp;</td>
@@ -130,27 +139,21 @@ Basic Definitions and Facts [<a href="Printouts/Lesson1_h.pdf" target="_blank">P
 
 <tr>
 <td style="width: 7%">11</td>
-<td style="width: 14%">December&nbsp; 29</td>
+<td style="width: 14%">June 07</td>
 <td>Psuedo Entropy and Pseudorandom Generators [<a href="Printouts/Lesson11_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">12</td>
-<td style="width: 14%">January&nbsp; 5</td>
+<td style="width: 14%">June 14</td>
 <td>Accessible Entropy and Statistically Hiding Commitments [<a href="Printouts/Lesson12_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
-	<tr>
-<td style="width: 7%">13</td>
-<td style="width: 14%">January&nbsp; 12</td>
-<td class="auto-style3">No Class <a href="http://www.cs.tau.ac.il/conferences/tcc2016/index.html" target="_blank">TCC in TAU</a></td>
-</tr>
-
-	</tr>
+	
 
 <tr>
 <td style="width: 7%">&nbsp;</td>
-<td style="width: 14%">January 26 </td>
+<td style="width: 14%">July 11 </td>
 <td class="auto-style2"><strong>Exam</strong></td>
 </tr>
 
