--- a/index.html
+++ b/index.html
@@ -304,6 +304,11 @@ The prizes are given for outstanding papers published in SIAM journals during th
 <h2> Teaching  </h2>
 <ul>
 
+<li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Info/Spring18/index.html"> Applications of Information Theory&nbsp; (Spring 18)</a></li>
+	
+ <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Seminars/DP/Spring18.html"> Seminar on Differential Privacy (student seminar)&nbsp; (Spring 18)</a></li>
+
+
 <li><a href="http://moodle.tau.ac.il/2017/course/view.php?id=368220001">Computational Models (Fall 17)</a></li>
 
 
@@ -315,8 +320,7 @@ The prizes are given for outstanding papers published in SIAM journals during th
 
   
 
-    <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Info/Fall15/index.html"> Applications of Information Theory&nbsp; (Fall 15)</a></li>
-	
+
     <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Seminars/ZK/Spring16.html"> Zero Knowledge Proofs (student seminar)&nbsp; (Spring 16)</a></li>
 
   <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Seminars/AvgHardness/Spring15.html"> Average-Case Hardness (student seminar)&nbsp; (Spring 15)</a></li>
