--- a/Courses/Seminars/DP/Spring18.html
+++ b/Courses/Seminars/DP/Spring18.html
@@ -202,7 +202,7 @@ Will be published before before spring semester starts.
 	<td> 
 	<div align="left">
 	<b>Traitor Tracing and Ramifications to DP <br> <br>
-	<i>Chapter 9.2.1</i>  and <a href="https://arxiv.org/abs/1207.6945">paper</a>
+	<i>Chapter 9.2.1</i>  and Section 3 &amp;  4 in this  <a href="https://arxiv.org/abs/1207.6945">paper</a> 
 	<br>
 	Relevant talks:  [<a href="https://www.youtube.com/watch?v=axhE-evQunE" target="_blank">video</a>] 
 	</div>
