--- a/Courses/Seminars/DP/Spring18.html
+++ b/Courses/Seminars/DP/Spring18.html
@@ -87,7 +87,7 @@ Will be published before before spring semester starts.
 	<b>Basic Techniques (part 1)<br> ss <br> <br>
 	<i>Chapter 3.1 to 3.5</i> <br>
 	Relevant talks:  [<a href="https://www.youtube.com/watch?v=Z1MOWGCyW20&t=4s" target="_blank">video1</a>] 
-	[<a href="https://www.youtube.com/watch?v=w6aHiz0ElkM&t=1s" target="_blank">video2</a>]
+	[<a href="https://www.youtube.com/watch?v=mqzOe2_-hYI" target="_blank">video2</a>]
 	
 	</div>
 	</td>     
