--- a/Courses/Seminars/DP/Spring18.html
+++ b/Courses/Seminars/DP/Spring18.html
@@ -24,10 +24,10 @@
 
                                                                                               
 
-Differential Privacy is an exciting mathematically rigorous definition of data privacy. After defining the notion, we we will  motivate and discuss the meaning of this definition,  and learn the fundamental techniques for achieving it.  
+Differential Privacy is an exciting mathematically rigorous definition of data privacy. After defining the notion, we will  motivate and discuss the meaning of this definition,  and learn the fundamental techniques for achieving it.  
 
 In most parts, the seminar will  follow the <a href="https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf">The Algorithmic Foundations
-of Differential Privacy</a>  monograph by by Cynthia Dwork and Aaron Roth.<br><br>
+of Differential Privacy</a>  monograph by Cynthia Dwork and Aaron Roth.<br><br>
  
 In each meeting one student will cover a single topic as listed below. <br><br>
 
@@ -46,7 +46,7 @@ are also welcome.
 <h2>Presentations</h2>
 Power Point presentations are acceptable, but white boards ones are preferable.<br>
 
-To do a good job one needs to <strong>read background material</strong>, see the reading section. <br> 
+To do a good job one needs to <strong>read background material</strong> (see the reading section). <br> 
 
 In addition, the speakers of the week will have to give me a <strong>practice talk</strong> a week before (right after the talk of that week).
 
@@ -54,9 +54,9 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 <br> <br>
 <h2>Topics and schedule </h2> 
 
-Will be published before before spring semester starts.
+Will be published before before spring semester starts
 
-(see Additional reading for further reading on your lecture topic)
+(see additional reading for further reading on your lecture topic).
 <br> <br>
 
  
@@ -84,10 +84,10 @@ Will be published before before spring semester starts.
    	<td> 2 </td> <td> 13/03 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
-	<b>Basic Techniques (part 1)<br> ss <br> <br>
+	<b>Basic techniques (part 1) <br> <br>
 	<i>Chapter 3.1 to 3.5</i> <br>
 	Relevant talks:  [<a href="https://www.youtube.com/watch?v=Z1MOWGCyW20&t=4s" target="_blank">video1</a>] 
-	[<a href="https://www.youtube.com/watch?v=mqzOe2_-hYI" target="_blank">video2</a>]
+	[<a href="https://www.youtube.com/watch?v=w6aHiz0ElkM&t=1s" target="_blank">video2</a>]
 	
 	</div>
 	</td>     
@@ -97,7 +97,7 @@ Will be published before before spring semester starts.
    	<td> 3 </td> <td> 20/03 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
-	<b>Basic Techniques (part 2)<br> ss <br> <br>
+	<b>Basic techniques (part 2) <br> <br>
 	<i>Chapter 3.6</i> 
 	<br>
 	Relevant talks:  [<a href="https://www.youtube.com/watch?v=xXMJDAh5zZI" target="_blank">video</a>] 
@@ -109,7 +109,7 @@ Will be published before before spring semester starts.
    	<td> 4 </td> <td> 10/04 </td> <td> ? </td> 
 	<td> 
 	<div align="left">
-	<b>BLR Mechanism SmallDB <br> <br>
+	<b>BLR mechanism - SmallDB <br> <br>
 	<i>Chapter 4.1</i> 
 	</div>
 	</td>     
@@ -119,7 +119,7 @@ Will be published before before spring semester starts.
    	<td> 5 </td> <td> 17/04 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
-	<b>Private Multiplicative Weights PMW <br> <br>
+	<b>Private multiplicative weights - PMW <br> <br>
 	<i>Chapter 4.2</i> 
 	<br>
 	Relevant talks:  [<a href="https://www.youtube.com/watch?v=2Eyc5c4Wdpk" target="_blank">video</a>] 
@@ -131,7 +131,7 @@ Will be published before before spring semester starts.
    	<td> 6 </td> <td> 24/04 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
-	<b>Net Mechanism (Generalization of SmallDB) <br> <br>
+	<b>Net mechanism (generalization of SmallDB) <br> <br>
 	<i>Chapter 5.1</i> 
 	</div>
 	</td>     
@@ -147,7 +147,7 @@ Will be published before before spring semester starts.
    	<td> 7 </td> <td> 08/05 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
-	<b>Iterative Construction Mechanism <br> <br>
+	<b>Iterative construction mechanism (generalization of PMW) <br> <br>
 	<i>Chapter 5.2</i> 
 	</div>
 	</td>     
@@ -157,7 +157,7 @@ Will be published before before spring semester starts.
    	<td> 8 </td> <td> 15/05 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
-	<b>Boosting for queries Algorithm <br> <br>
+	<b>Boosting for queries algorithm <br> <br>
 	<i>Chapter 6.1</i> 
 	</div>
 	</td>     
@@ -167,7 +167,7 @@ Will be published before before spring semester starts.
    	<td> 9 </td> <td> 22/05 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
-	<b>Reconstruction Attacks <br> <br>
+	<b>Reconstruction attacks <br> <br>
 	<i>Chapter 8.1</i> 
 	<br>
 	Relevant talks:  [<a href="https://www.youtube.com/watch?v=5_lTDPYOUJw" target="_blank">video</a>] 
@@ -179,7 +179,7 @@ Will be published before before spring semester starts.
    	<td> 10 </td> <td> 29/05 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
-	<b>Lower Bounds by Packing Arguments <br> <br>
+	<b>Lower bounds by packing arguments <br> <br>
 	<i>Chapter 8.2</i> 
 	<br>
 	Relevant talks:  [<a href="https://www.youtube.com/watch?v=Gj_Wy6ZNPsI&t=9s" target="_blank">video</a>] 
@@ -191,7 +191,7 @@ Will be published before before spring semester starts.
    	<td> 11 </td> <td> 05/06 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
-	<b>Limits of Poly-time curators <br> <br>
+	<b>Limits of poly-time curators <br> <br>
 	<i>Chapters 9.1 &amp; 9.2</i> 
 	</div>
 	</td>     
@@ -201,7 +201,7 @@ Will be published before before spring semester starts.
    	<td> 12 </td> <td> 12/05 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
-	<b>Traitor Tracing and Ramifications to DP <br> <br>
+	<b>Traitor tracing and ramifications to DP <br> <br>
 	<i>Chapter 9.2.1</i>  and Section 3 &amp;  4 in this  <a href="https://arxiv.org/abs/1207.6945">paper</a> 
 	<br>
 	Relevant talks:  [<a href="https://www.youtube.com/watch?v=axhE-evQunE" target="_blank">video</a>] 
