--- a/Courses/Seminars/DP/Spring18.html
+++ b/Courses/Seminars/DP/Spring18.html
@@ -109,8 +109,8 @@ Will be published before before spring semester starts
    	<td> 4 </td> <td> 10/04 </td> <td> ? </td> 
 	<td> 
 	<div align="left">
-	<b>BLR mechanism - SmallDB <br> <br>
-	<i>Chapter 4.1</i> 
+	<b>BLR mechanism and Generalization <br> <br>
+	<i>Chapters 4.1 & 5.1</i> 
 	</div>
 	</td>     
  </tr>
@@ -131,10 +131,10 @@ Will be published before before spring semester starts
    	<td> 6 </td> <td> 24/04 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
-	<b>Net mechanism (generalization of SmallDB) <br> <br>
-	<i>Chapter 5.1</i> 
+	<b>Iterative construction mechanism (generalization of PMW) <br> <br>
+	<i>Chapter 5.2</i> 
 	</div>
-	</td>     
+	</td>    
  </tr>
 
 <tr  style= "BACKGROUND: rgb(255,0,0) 0% 50%">
@@ -147,18 +147,20 @@ Will be published before before spring semester starts
    	<td> 7 </td> <td> 08/05 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
-	<b>Iterative construction mechanism (generalization of PMW) <br> <br>
-	<i>Chapter 5.2</i> 
+	<b>Boosting for queries algorithm <br> <br>
+	<i>Chapter 6.1</i> 
 	</div>
-	</td>     
+	</td>      
  </tr>
  
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
    	<td> 8 </td> <td> 15/05 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
-	<b>Boosting for queries algorithm <br> <br>
-	<i>Chapter 6.1</i> 
+	<b>Exploiting low local sensitivity <br> <br>
+	<i>Chapters 7.1 & 7.2</i> 
+	<br>
+	Relevant talks:  [<a href="https://www.youtube.com/watch?v=EH6hac8qnX0" target="_blank">video</a>] 
 	</div>
 	</td>     
  </tr>
@@ -188,7 +190,7 @@ Will be published before before spring semester starts
  </tr>
  
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-   	<td> 11 </td> <td> 05/06 </td> <td> ?  </td> 
+   	<td> 11 </td> <td> 05/06 </td> <td> Matan Orland  </td> 
 	<td> 
 	<div align="left">
 	<b>Limits of poly-time curators <br> <br>
@@ -198,11 +200,11 @@ Will be published before before spring semester starts
  </tr>
  
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-   	<td> 12 </td> <td> 12/05 </td> <td> ?  </td> 
+   	<td> 12 </td> <td> 12/06 </td> <td> ?  </td> 
 	<td> 
 	<div align="left">
 	<b>Traitor tracing and ramifications to DP <br> <br>
-	<i>Chapter 9.2.1</i>  and Section 3 &amp;  4 in this  <a href="https://arxiv.org/abs/1207.6945">paper</a> 
+	<i>Chapter 9.2.1</i>  and Sections 3 &amp;  4 in this  <a href="https://arxiv.org/abs/1207.6945">paper</a> 
 	<br>
 	Relevant talks:  [<a href="https://www.youtube.com/watch?v=axhE-evQunE" target="_blank">video</a>] 
 	</div>
