--- a/Courses/Seminars/DP/Spring18.html
+++ b/Courses/Seminars/DP/Spring18.html
@@ -81,7 +81,7 @@ Will be published before before spring semester starts
 </tr>
 
 <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-   	<td> 2 </td> <td> 13/03 </td> <td> ?  </td> 
+   	<td> 2 </td> <td> 13/03 </td> <td> Oded Nir  </td> 
 	<td> 
 	<div align="left">
 	<b>Basic techniques (part 1) <br> <br>
@@ -94,7 +94,7 @@ Will be published before before spring semester starts
  </tr>
 
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-   	<td> 3 </td> <td> 20/03 </td> <td> ?  </td> 
+   	<td> 3 </td> <td> 20/03 </td> <td> Or Almer  </td> 
 	<td> 
 	<div align="left">
 	<b>Basic techniques (part 2) <br> <br>
