--- a/Courses/Info/Spring18/index.html
+++ b/Courses/Info/Spring18/index.html
@@ -36,7 +36,7 @@
 
 <h1>Information Theory and Applications to Computer Science</h1>
 
-	 Tuesdays: 10:00-13:00, Room: ?<br /><br />
+	 Tuesdays: 10:00-13:00, Room: Schriber 007<br /><br />
 
 <b>Instructor:</b> <a href="http://www.cs.tau.ac.il/~iftachh" target="_blank">Iftach Haitner</a> | Schreiber 020<br /><br />
 
