--- a/Courses/Seminars/DP/Spring18.html
+++ b/Courses/Seminars/DP/Spring18.html
@@ -106,7 +106,7 @@ Will be published before before spring semester starts
  </tr>
  
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-   	<td> 4 </td> <td> 10/04 </td> <td> ? </td> 
+   	<td> 4 </td> <td> 10/04 </td> <td>? </td> 
 	<td> 
 	<div align="left">
 	<b>BLR mechanism and Generalization <br> <br>
@@ -116,7 +116,7 @@ Will be published before before spring semester starts
  </tr>
  
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-   	<td> 5 </td> <td> 17/04 </td> <td> ?  </td> 
+   	<td> 5 </td> <td> 17/04 </td> <td> Michael Bargury   </td> 
 	<td> 
 	<div align="left">
 	<b>Private multiplicative weights - PMW <br> <br>
@@ -128,7 +128,7 @@ Will be published before before spring semester starts
  </tr>
  
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-   	<td> 6 </td> <td> 24/04 </td> <td> ?  </td> 
+   	<td> 6 </td> <td> 24/04 </td> <td> Itai Admi  </td> 
 	<td> 
 	<div align="left">
 	<b>Iterative construction mechanism (generalization of PMW) <br> <br>
@@ -154,7 +154,7 @@ Will be published before before spring semester starts
  </tr>
  
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-   	<td> 8 </td> <td> 15/05 </td> <td> ?  </td> 
+   	<td> 8 </td> <td> 15/05 </td> <td> Amit Zohar </td> 
 	<td> 
 	<div align="left">
 	<b>Exploiting low local sensitivity <br> <br>
@@ -166,7 +166,7 @@ Will be published before before spring semester starts
  </tr>
  
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-   	<td> 9 </td> <td> 22/05 </td> <td> ?  </td> 
+   	<td> 9 </td> <td> 22/05 </td> <td> Shlomi Shamir  </td> 
 	<td> 
 	<div align="left">
 	<b>Reconstruction attacks <br> <br>
