--- a/Courses/Seminars/DP/Spring18.html
+++ b/Courses/Seminars/DP/Spring18.html
@@ -106,7 +106,7 @@ Will be published before before spring semester starts
  </tr>
  
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-   	<td> 4 </td> <td> 10/04 </td> <td>? </td> 
+   	<td> 4 </td> <td> 10/04 </td> <td>Nir Eshdat  </td> 
 	<td> 
 	<div align="left">
 	<b>BLR mechanism and Generalization <br> <br>
