--- a/Courses/Seminars/DP/Spring18.html
+++ b/Courses/Seminars/DP/Spring18.html
@@ -144,7 +144,7 @@ Will be published before before spring semester starts
 
 
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-   	<td> 7 </td> <td> 08/05 </td> <td> ?  </td> 
+   	<td> 7 </td> <td> 08/05 </td> <td> Inbar Oren  </td> 
 	<td> 
 	<div align="left">
 	<b>Boosting for queries algorithm <br> <br>
@@ -178,7 +178,9 @@ Will be published before before spring semester starts
  </tr>
  
   <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-   	<td> 10 </td> <td> 29/05 </td> <td> ?  </td> 
+   	<td> 10 </td> <td> 29/05 </td> <td> Daniel Katzman
+Daniel Katzman's profile photo
+  </td> 
 	<td> 
 	<div align="left">
 	<b>Lower bounds by packing arguments <br> <br>
