--- a/Courses/Seminars/DP/Spring18.html
+++ b/Courses/Seminars/DP/Spring18.html
@@ -201,7 +201,7 @@ Will be published before before spring semester starts
  </tr>
  
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-   	<td> 12 </td> <td> 12/06 </td> <td> ?  </td> 
+   	<td> 12 </td> <td> 12/06 </td> <td> Bar Alon  </td> 
 	<td> 
 	<div align="left">
 	<b>Traitor tracing and ramifications to DP <br> <br>
