--- a/Courses/Seminars/DP/Spring18.html
+++ b/Courses/Seminars/DP/Spring18.html
@@ -226,6 +226,8 @@ Will be published before before spring semester starts
 <ul> 
 	<li> 
 		 <a href="https://cyber.biu.ac.il/event/the-7th-biu-winter-school/" target="_blank">Seventh  BIU winter school  on Differential privacy</a>
+		 
+		 (also see this  <a href="https://www.youtube.com/watch?v=WHJoYOU-ZKA" target="_blank">video</a> for the  Private Data Release talk)
 	</li>
 <br>
 	<li> 
