--- a/index.html
+++ b/index.html
@@ -282,6 +282,9 @@ The prizes are given for outstanding papers published in SIAM journals during th
 </ul>
 <b>Seminars   and Workshops </b>
 <UL>
+
+<li>Co-organizer of the <a href="https://www.gilsegev.net/crypto-in-the-galilee-2018">Crypto in the Galilee 2018</a></li
+
 <li>Co-organizer of the <a href="https://desertcrypt2015.workshop.org.il/">Second Desert Workshop in Cryptography 2016</a></li>
 
 <li>Co-organizer of the <a href="http://intractability2013.workshop.org.il/">Modeling  Intractability workshop 2013</a></li>
