--- a/index.html
+++ b/index.html
@@ -397,35 +397,63 @@ Draft of full version <a href="papers/ComputationalCorrelation/ComputationalCorr
 
 <div class="box">
 <p>
-We prove a dichotomy theorem for two-party protocols, and show that for every poly-time
-two-party protocol with single-bit output, at least one of following holds:<br><br>
+Consider an efficient two-party protocol that given security parameter <span class=blu2>k</span>,  both parties output
+single bits <span class=blu2>X<sub>k</sub></span>  and <span class=blu2>Y<sub>k</sub></span>, respectively. We are interested in how <span class=blu2>(X<sub>k</sub>,Y<sub>k</sub>)</span> "appears" to an efficient
+adversary that only views the transcript <span class=blu2>T<sub>k</sub></span>. We make the following contributions:<br><br>
 
 <ul>  
+<li> 
+We develop new tools to argue about this loose notion, and show (modulo some caveats)
+that for every such protocol there exists an efficient simulator such that the following holds: on input  <span class=blu2>T<sub>k</sub></span>, the simulator outputs a pair <span class=blu2>(X'<sub>k</sub>,Y'<sub>k</sub>)</span> 
+such that <span class=blu2>(X'<sub>k</sub>,Y'<sub>k</sub>,T<sub>k</sub>)</span> 
+is (somewhat) computationally indistinguishable from <span class=blu2>(X<sub>k</sub>,Y<sub>k</sub>,T<sub>k</sub>)</span>. 
+</li> 
+<br>
+<li>
+We use these tools to prove the following dichotomy theorem: every such protocol  is:
 
-<li> The protocol can be used to construct a key-agreement protocol.</li> <br>
+<ul>
+<li> either uncorrelated:  it is (somewhat) indistinguishable from an effcient protocol
+whose parties interact to produce transcript <span class=blu2>T<sub>k</sub></span>, but then choose their outputs independently from some product distribution (that is determined in poly-time from <span class=blu2>T<sub>k</sub></span>),
 
-<li> For every constant <span class=blu2>&rho; > 0</span> the parties' output is <em> <span class=blu2>&rho;</span>-uncorrelated</em>: let  <span class=blu2>(X; Y; T)</span> denote the
-parties' outputs and the protocol's transcript respectively. A protocol is <span class=blu2>&rho;</span>-uncorrelated if
-there exists an efficient "decorralizer" algorithm Decor, that when given a random transcript
-<span class=blu2>T</span>, produces two numbers <span class=blu2>P<sub>A</sub>; P<sub>B</sub></span>, such that no efficient algorithm can distinguish
-<span class=blu2>  (U<sub>P<sub>A</sub></sub> ;U<sub>P<sub>B</sub></sub> ; T)</span> (where <span class=blu2> U<sub>p</sub></span> 
-denotes a biassed coin with bias <span class=blu2> p</span> from <span class=blu2>(X; Y; T)</span>, with distinguishing
-advantage larger than <span class=blu2>&rho;</span>.</li><br>
+</li> 
+
+<li>or, the protocol implies a key-agreement protocol (for infinitely  many <span class=blu2>k</span>'s). </li>
+
 </ul> 
-Namely, if the protocol cannot be used to construct key-agreement, then its output distribution
-<span class=blu2>(X; Y; T)</span> is trivial: it can be simulated non-interactively by the parties given public
-randomness (used to sample <span class=blu2>T</span>). (The precise statement also has qualifiers of the form: "on
-infinitely many choices of the security parameter").<br>
+ <br>
+ 
+ 
+Uncorrelated protocols are completely uninteresting from a cryptographic viewpoint, as
+the correlation between outputs is uninteresting. Our dichotomy shows that every protocol
+is either completely uninteresting or implies key-agreement.<br><br>
 
-We use the above characterization to prove that <span class=blu2>(&alpha;= 24&epsilon;<sup>2</sup>)</span>-correct
-differentially private symmetric protocol for computing XOR, implies the existence of key-agreement protocol. The
-above dependency between <span class=blu2>&alpha;</span> and <span class=blu2>&epsilon;</span> is tight since an <span class=blu2>&Theta;(&epsilon;<sup>2</sup>)</span>-correct "-differentially private
-protocol for computing XOR is known to exists unconditionally. It also improves, in the <span class=blu2>(&epsilon;,&alpha;)</span>
-dependency aspect, upon <span class=blu1> Goyal et al. [ICALP '16] </span> who showed that, for some constant <span class=blu2>c > 0</span>,
-a <span class=blu2>c</span>-correct "-differentially private protocol for computing XOR implies oblivious transfer. Our
-result extends to a weaker notion of dierential privacy in which the privacy only requires to
-hold against external observer. Interestingly, the reductions used for proving the above results
-are non black box.
+<li>  
+We use the above dichotomy to make progress on open problems on minimal cryptographic
+assumptions required for differentially private mechanisms for the XOR function.
+</li> 
+
+<li>
+A subsequent work of Haitner et al. uses the above dichotomy to makes progress on a long-
+standing open question regarding the complexity of fair two-party coin-flipping protocols.
+</li>  
+</ul> 
+<br>
+We highlight the following two ideas regarding our technique:<br>
+<ul>
+ <li>
+ The simulator algorithm is obtained by a carefully designed "competition" between efficient algorithms attempting to forecast <span class=blu2>(X<sub>k</sub>,Y<sub>k</sub>)|<sub>T<sub>k</sub>=t</sub></span>. The winner is used to simulate the outputs of the protocol. To the best of our knowledge, this idea has not been used before (at least in this context).
+</li> 
+<li>
+Our key-agreement protocol uses the simulation to reduce to an information theoretic
+setup, and is in some sense non-black box.
+</li> 
+</ul> 
+
+
+
+
+
 </p>
 </div>
 </li>
